--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 @font-face {
   font-family: 'gotham-black';
+  font-display: block;
   src: url('./fonts/Gotham-Black.ttf');
 }
 
 @font-face {
   font-family: 'gotham-book';
+  font-display: block;
   src: url('./fonts/Gotham-Book.ttf');
 }
 
